# Yadro

./: .gitignore  CMakeLists.txt  README.md  bin_file_generator.py  check.py
config/: delay.ini
inc/: FileTape.hpp  Tape.hpp  TapeConfig.hpp  TapeDelaysConfig.hpp  TapeSorter.hpp
inc/algorithms/: TapeSorter.hpp
interfaces/: tapeinterface.hpp
src/: FileTape.cpp  Tape.cpp  TapeConfig.cpp  TapeDelaysConfig.cpp  TapeSorter.cpp  main.cpp
